fixed spacing in the projects

--- a/app.css
+++ b/app.css
@@ -340,7 +340,8 @@ html,body {
 }
 
 #main.home,
-#main.articles{
+#main.articles,
+#main.project{
 	padding-bottom: 0;
 }
 
